--- a/src/components/MyStake/MyStake.module.css
+++ b/src/components/MyStake/MyStake.module.css
@@ -1,8 +1,8 @@
 .root {
   margin-top: 2.5rem;
   padding: 2rem;
-  background-color: #eee;
-  box-shadow: 0.5rem 0.5rem 10rem rgb(172, 169, 169);
+  background-color: rgba(1, 6, 37, 0.815);
+  box-shadow: 0.25rem 0.25rem 0.75rem 0.75rem rgb(181, 199, 247);
   border-radius: 1rem;
   display: flex;
   justify-content: space-between;
@@ -10,7 +10,7 @@
 }
 
 .heading {
-  color: brown;
+  color: rgb(7, 170, 245);
   font-size: 2.2rem;
   text-transform: capitalize;
 }
@@ -29,9 +29,17 @@
 .form3 {
   margin-top: 0;
 }
+.result p {
+  margin-bottom: 1.5rem;
+  color: #bbb;
+}
+.result h4 {
+  margin-bottom: 0.25rem;
+  color: #fff;
+}
 
 .address {
-  background-color: rgb(255, 196, 0);
+  background-color: rgba(1, 6, 37, 0.15);
   padding: 1rem;
   border-radius: 0.3rem;
 }
@@ -45,11 +53,17 @@
   border-radius: 0.2rem;
   border: none;
 }
+.input3 {
+  padding: 0.8rem;
+  border-radius: 0.2rem;
+  border: none;
+  width: 65%;
+}
 
 .stake_btn {
   padding: 0.8rem 1.2rem;
   border: 0;
-  background-color: rgb(8, 153, 107);
+  background-color: rgb(0, 134, 29);
   border-radius: 0.3rem;
   margin-left: 1rem;
   width: 6rem;
@@ -60,7 +74,7 @@
 .unstake_btn {
   padding: 0.8rem 1.2rem;
   border: 0;
-  background-color: brown;
+  background-color: rgb(180, 14, 3);
   border-radius: 0.3rem;
   margin-left: 1rem;
   width: 6rem;
@@ -70,7 +84,7 @@
 .getAddress_btn {
   padding: 0.8rem 1.2rem;
   border: 0;
-  background-color: brown;
+  background-color: rgb(180, 14, 3);
   border-radius: 0.3rem;
   margin-left: 1rem;
   width: 6rem;
