--- a/src/components/MyStake/MyStake.module.css
+++ b/src/components/MyStake/MyStake.module.css
@@ -2,7 +2,7 @@
   margin-top: 2.5rem;
   padding: 2rem;
   background-color: rgba(1, 6, 37, 0.815);
-  box-shadow: 0.25rem 0.25rem 0.75rem 0.75rem rgb(181, 199, 247);
+  box-shadow: 0.05rem 0.05rem 0.1rem 0.1rem rgb(181, 199, 247);
   border-radius: 1rem;
   display: flex;
   justify-content: space-between;
@@ -39,7 +39,7 @@
 }
 
 .address {
-  background-color: rgba(1, 6, 37, 0.15);
+  background-color: rgba(1, 6, 37, 0.815);
   padding: 1rem;
   border-radius: 0.3rem;
 }
@@ -91,7 +91,7 @@
   cursor: pointer;
 }
 
-.btn_diabled {
+.btn_disabled {
   background-color: rgb(168, 164, 164);
   cursor: not-allowed;
 }
