--- a/src/components/Connected/Connected.module.css
+++ b/src/components/Connected/Connected.module.css
@@ -1,28 +1,28 @@
 .root {
-    display: flex;
-    width: 32rem;
-    justify-content: space-between;
-    font-size: 1.2rem;
-    font-weight: 500;
-    padding: 1rem 2rem; 
-    background-color: rgb(8, 153, 107);
-    color: #fff;
-    border-radius: .8rem;
-    align-items: center;
+  display: flex;
+  width: 32rem;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding: 1rem 2rem;
+  background-color: rgba(1, 6, 37, 0.815);
+  color: #fff;
+  border-radius: 0.8rem;
+  align-items: center;
 }
 
-.token_bal, .matic_bal {
-    padding: .5rem .8rem;
-    border-radius: .4rem;
+.token_bal,
+.matic_bal {
+  padding: 0.5rem 0.8rem;
+  border-radius: 0.4rem;
 }
 
 .token_bal {
-    background-color: rgb(199, 236, 224);
-    color: rgb(8, 153, 107);
-    
+  background-color: rgb(199, 236, 224);
+  color: rgba(1, 6, 37, 0.815);
 }
 
 .matic_bal {
-    background-color: brown;
-    color: #fff;
+  background-color: rgb(180, 14, 3);
+  color: #fff;
 }
