--- a/src/components/MyStake/Card/Card.module.css
+++ b/src/components/MyStake/Card/Card.module.css
@@ -1,6 +1,7 @@
 .root {
   padding: 1.5rem;
   background-color: rgba(1, 6, 37, 0.815);
+  box-shadow: 0.05rem 0.05rem 0.1rem 0.1rem rgb(1, 3, 8);
   border-radius: 0.3rem;
   width: 12rem;
   margin-right: 2rem;
