--- a/src/components/MyStake/MyStake.module.css
+++ b/src/components/MyStake/MyStake.module.css
@@ -40,6 +40,7 @@
 
 .address {
   background-color: rgba(1, 6, 37, 0.815);
+  box-shadow: 0.05rem 0.05rem 0.1rem 0.1rem rgb(1, 3, 8);
   padding: 1rem;
   border-radius: 0.3rem;
 }
@@ -69,6 +70,9 @@
   color: #fff;
   cursor: pointer;
 }
+.stake_btn:hover {
+  background-color: rgba(0, 134, 29, 0.5);
+}
 
 .unstake_btn {
   padding: 0.8rem 1.2rem;
@@ -80,6 +84,9 @@
   color: #fff;
   cursor: pointer;
 }
+.unstake_btn:hover {
+  background-color: rgba(180, 14, 3, 0.5);
+}
 .getAddress_btn {
   padding: 0.8rem 1.2rem;
   border: 0;
@@ -89,6 +96,9 @@
   width: 6rem;
   color: #fff;
   cursor: pointer;
+}
+.getAddress_btn:hover {
+  background-color: rgb(180, 14, 3);
 }
 
 .btn_disabled {
